--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,16 @@
     box-sizing: border-box;
 }
 
+/* .page-bg {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url(images/bg.jpg) center no-repeat;
+    background-size: cover;
+  
+} */
+
 body {
     font-family: 'Arial', sans-serif;
     background-color: #f4f4f4;
